syntax = "proto3";

package password;


option go_package = "./proto/password;password";


message ChangePassworsRequest {
    string email = 1;
    string new_password = 2;
}

message ChangePasswordResponse {
    string messagge = 1;
}

service PasswordService {
    rpc ChangePassword(ChangePassworsRequest) returns (ChangePasswordResponse);
}